--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,28 +8,6 @@
   max-width: 700px;
 }
 
-.left {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-
-.left .logo {
-  font-size: 1.5rem;
-}
-
-.left ul {
-  margin: 1rem 0;
-}
-
-.left ul li {
-  padding: 1.5rem 0.5rem;
-}
-
-.left ul li a {
-  font-size: 0.8rem;
-}
-
 .container-long #featured-movie .movie {
   margin-left: 3rem;
 }
@@ -89,6 +67,32 @@
 }
 
 @media (max-width: 480px) {
+  body {
+    overflow-y: auto;
+  }
+  .background-img {
+    width: 100%;
+    top: 30%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .left {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .left .hamburger {
+    display: block;
+  }
+  .left .logo {
+    font-size: 1.5rem;
+  }
+  .left ul {
+    display: none;
+  }
   .container-long {
     width: 100vw;
     height: 100vh;
@@ -96,6 +100,29 @@
   .container-long #featured-movie {
     width: 100%;
     height: 100vh;
+  }
+  .container-long #featured-movie .movie .movie-title {
+    margin-top: 2.5rem;
+    font-size: 2.3rem;
+  }
+  .container-long #featured-movie .movie .buttons a {
+    padding: 1.3rem 1rem;
+  }
+  .container-long #featured-movie .about-movie {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    height: 45%;
+    padding-bottom: 20px;
+    grid-column-gap: 1rem;
+  }
+  .container-long #featured-movie .about-movie .sec {
+    height: auto;
+  }
+  .container-long #featured-movie .about-movie .sec h1 {
+    font-size: 0.9rem;
+  }
+  .container-long #featured-movie .about-movie .sec p {
+    font-size: 0.7rem;
   }
 }
 /*# sourceMappingURL=mobile.css.map */
