--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -6,22 +6,7 @@
 .container {
   max-width: 700px;
 }
-.left {
-  justify-content: flex-start;
-  .logo {
-    font-size: 1.5rem;
-  }
-  ul {
-    margin: 1rem 0;
-  }
-  ul li {
-    padding: 1.5rem 0.5rem;
 
-    a {
-      font-size: 0.8rem;
-    }
-  }
-}
 .container-long {
   #featured-movie {
     .movie {
@@ -70,12 +55,60 @@
   }
 }
 @media (max-width: 480px) {
+  body {
+    overflow-y: auto;
+  }
+  .background-img {
+    width: 100%;
+    top: 30%;
+    transform: translateY(-50%);
+  }
+  .left {
+    justify-content: space-between;
+    align-items: center;
+    .hamburger {
+      display: block;
+    }
+    .logo {
+      font-size: 1.5rem;
+    }
+    ul {
+      display: none;
+    }
+  }
   .container-long {
     width: 100vw;
     height: 100vh;
     #featured-movie {
       width: 100%;
       height: 100vh;
+      .movie {
+        .movie-title {
+          margin-top: 2.5rem;
+          font-size: 2.3rem;
+        }
+        .buttons {
+          a {
+            padding: 1.3rem 1rem;
+          }
+        }
+      }
+      .about-movie {
+        grid-template-columns: repeat(2, 1fr);
+
+        height: 45%;
+        padding-bottom: 20px;
+        grid-column-gap: 1rem;
+        .sec {
+          height: auto;
+          h1 {
+            font-size: 0.9rem;
+          }
+          p {
+            font-size: 0.7rem;
+          }
+        }
+      }
     }
   }
 }
