--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -97,6 +97,7 @@
         grid-template-columns: repeat(2, 1fr);
 
         height: 45%;
+        width: 95%;
         padding-bottom: 20px;
         grid-column-gap: 1rem;
         .sec {
