--- a/css/mobile.css
+++ b/css/mobile.css
@@ -66,6 +66,19 @@
   display: none;
 }
 
+.movie-search {
+  width: 500px;
+}
+
+#search-results {
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+}
+
+#search-results .card {
+  margin: 0.5rem 0.2rem;
+}
+
 @media (max-width: 480px) {
   body {
     overflow-y: auto;
@@ -124,6 +137,18 @@
   }
   .container-long #featured-movie .about-movie .sec p {
     font-size: 0.7rem;
+  }
+  .movie-search {
+    width: 300px;
+    height: 125px;
+  }
+  .movie-search #search-text {
+    width: 250px;
+    font-size: 1.3rem;
+  }
+  #search-results {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
   }
 }
 /*# sourceMappingURL=mobile.css.map */
