--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,3 +1,4 @@
+// PAGE 1
 .background-img {
   width: 80%;
   right: -0%;
@@ -54,7 +55,18 @@
     display: none;
   }
 }
+// MOVIES PAGE
+.movie-search {
+  width: 500px;
+}
+#search-results {
+  grid-template-columns: repeat(2, 1fr);
+  .card {
+    margin: 0.5rem 0.2rem;
+  }
+}
 @media (max-width: 480px) {
+  // PAGE 1
   body {
     overflow-y: auto;
   }
@@ -111,5 +123,17 @@
         }
       }
     }
+  }
+  // MOVIES PAGE
+  .movie-search {
+    width: 300px;
+    height: 125px;
+    #search-text {
+      width: 250px;
+      font-size: 1.3rem;
+    }
+  }
+  #search-results {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
