--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,85 +1,233 @@
-.background-img {
-  width: 80%;
-  right: -0%;
-  top: 10%;
-}
-
-.container {
-  max-width: 700px;
-}
-
-.container-long #featured-movie .movie {
-  margin-left: 3rem;
-}
-
 .container-long #featured-movie .movie .movie-title {
-  font-size: 3rem;
-  margin-top: 5rem;
+  font-size: 3.2rem;
 }
 
-.container-long #featured-movie .movie .sub-title {
-  margin: 0;
-  padding-bottom: 2rem;
+.box {
+  height: auto;
 }
 
-.container-long #featured-movie .movie .buttons {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  width: 55%;
+@media (max-width: 950px) {
+  .background-img {
+    width: 80%;
+    right: -0%;
+    top: 10%;
+  }
+  .container {
+    max-width: 700px;
+  }
+  .container-long #featured-movie .movie {
+    margin-left: 3rem;
+  }
+  .container-long #featured-movie .movie .movie-title {
+    font-size: 3rem;
+    margin-top: 5rem;
+  }
+  .container-long #featured-movie .movie .sub-title {
+    margin: 0;
+    padding-bottom: 2rem;
+  }
+  .container-long #featured-movie .movie .buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    width: 55%;
+  }
+  .container-long #featured-movie .movie .buttons .btn-white {
+    width: 100%;
+    margin-top: 0.7rem;
+  }
+  .container-long #featured-movie .movie .buttons .btn-accent {
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 0.7rem;
+  }
+  .container-long #featured-movie .about-movie {
+    height: 40%;
+    width: 90vw;
+    grid-column-gap: 0.5rem;
+    padding-left: 24px;
+  }
+  .container-long #featured-movie .about-movie .sec h1 {
+    font-size: 1rem;
+    padding-bottom: 0.5rem;
+  }
+  .container-long #featured-movie .about-movie .sec p {
+    font-size: 0.8rem;
+  }
+  .container-long #related {
+    display: none;
+  }
+  .movie-search {
+    width: 500px;
+  }
+  #my-List {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+  #search-results {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  #search-results .card {
+    margin: 0.5rem 0.2rem;
+  }
+  .box {
+    height: auto;
+    padding: 1.5rem 0.75rem;
+    width: 90%;
+    margin-top: 0rem;
+    margin-bottom: 0;
+  }
+  .box h1 {
+    padding: 1rem 0;
+  }
+  .box p {
+    padding: 1rem 0;
+    font-size: 0.8rem;
+    text-align: center;
+  }
+  .box span {
+    display: none;
+  }
+  .box-contact {
+    margin-bottom: 2.5rem;
+    width: 80%;
+  }
+  .box-contact form {
+    margin: 0 1rem;
+    width: auto;
+  }
+  .mobile-card .flex {
+    padding-left: 1.5rem;
+  }
 }
 
-.container-long #featured-movie .movie .buttons .btn-white {
-  width: 100%;
-  margin-top: 0.7rem;
+@media (max-width: 670px) {
+  body {
+    overflow-y: auto;
+  }
+  .box {
+    position: relative;
+    z-index: -1;
+  }
+  .box p {
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+    -webkit-transition-delay: 0.5s;
+            transition-delay: 0.5s;
+    z-index: 0;
+  }
+  .background-img {
+    width: 100%;
+    top: 30%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .left {
+    width: 90vw;
+    position: fixed;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .left .hamburger {
+    display: block;
+    z-index: 4;
+  }
+  .left .logo {
+    font-size: 1.5rem;
+  }
+  .left ul {
+    position: fixed;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    background: #5d6390;
+    height: 100vh;
+    width: 100vw;
+    -webkit-clip-path: circle(50px at -10% -10%);
+            clip-path: circle(50px at -10% -10%);
+    -webkit-transition: all 1s;
+    transition: all 1s;
+    pointer-events: none;
+    z-index: 3;
+  }
+  .left ul.open {
+    z-index: 3;
+    -webkit-clip-path: circle(1250px at -10% -10%);
+            clip-path: circle(1250px at -10% -10%);
+    pointer-events: all;
+  }
+  .left ul li a {
+    opacity: 1;
+    border: none;
+    font-size: 1.4rem;
+    z-index: 4;
+  }
+  .left ul .selected {
+    border: none;
+  }
+  .left ul .selected a {
+    color: #fd3143;
+  }
+  .background-img {
+    top: 40%;
+  }
+  .container-long {
+    width: 100vw;
+    height: 100vh;
+  }
+  .container-long #featured-movie {
+    width: 100%;
+    height: 100vh;
+  }
+  .container-long #featured-movie .movie .movie-title {
+    margin-top: 2.5rem;
+    font-size: 2.3rem;
+  }
+  .container-long #featured-movie .movie .buttons a {
+    padding: 1.3rem 1rem;
+  }
+  .container-long #featured-movie .about-movie {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    height: 45%;
+    width: 95%;
+    padding-bottom: 20px;
+    grid-column-gap: 1rem;
+  }
+  .container-long #featured-movie .about-movie .sec {
+    height: auto;
+  }
+  .container-long #featured-movie .about-movie .sec h1 {
+    font-size: 0.9rem;
+  }
+  .container-long #featured-movie .about-movie .sec p {
+    font-size: 0.7rem;
+  }
 }
 
-.container-long #featured-movie .movie .buttons .btn-accent {
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 0.7rem;
-}
-
-.container-long #featured-movie .about-movie {
-  height: 40%;
-  width: 90vw;
-  grid-column-gap: 0.5rem;
-  padding-left: 24px;
-}
-
-.container-long #featured-movie .about-movie .sec h1 {
-  font-size: 1rem;
-  padding-bottom: 0.5rem;
-}
-
-.container-long #featured-movie .about-movie .sec p {
-  font-size: 0.8rem;
-}
-
-.container-long #related {
-  display: none;
-}
-
-.movie-search {
-  width: 500px;
-}
-
-#search-results {
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-}
-
-#search-results .card {
-  margin: 0.5rem 0.2rem;
-}
-
-@media (max-width: 480px) {
+@media (max-width: 450px) {
   body {
     overflow-y: auto;
   }
@@ -103,8 +251,9 @@
   .left .logo {
     font-size: 1.5rem;
   }
-  .left ul {
-    display: none;
+  .box-contact {
+    width: 90%;
+    height: 100vh;
   }
   .container-long {
     width: 100vw;
@@ -149,6 +298,66 @@
   #search-results {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
+  }
+  .mobile-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+    padding: 1rem;
+  }
+  .mobile-card div img {
+    height: 100%;
+  }
+  .mobile-card .flex {
+    padding-left: 0;
+    padding-top: 1rem;
+  }
+  .mobile-card .flex .sub-title {
+    padding: 0 1.5rem;
+    font-size: 1rem;
+  }
+  .mobile-card .flex ul li {
+    font-size: 0.8rem;
+    padding: 0.7rem 1.5rem;
+  }
+  .plot-card {
+    height: auto;
+    padding: 0;
+    margin: 0;
+  }
+  .plot-card .flex {
+    margin: 0;
+    padding: 2.5rem;
+  }
+  .plot-card .flex div {
+    height: 30vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .plot-card .flex p {
+    padding: 1rem 0;
+    font-size: 0.8rem;
+  }
+  .plot-card .flex a {
+    width: 60%;
+    margin: 0;
+    text-align: center;
   }
 }
 /*# sourceMappingURL=mobile.css.map */
