--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,71 +1,228 @@
-// PAGE 1
-.background-img {
-  width: 80%;
-  right: -0%;
-  top: 10%;
-}
-.container {
-  max-width: 700px;
-}
-
+@import "vars";
 .container-long {
   #featured-movie {
     .movie {
-      margin-left: 3rem;
       .movie-title {
-        font-size: 3rem;
-        margin-top: 5rem;
-      }
-      .sub-title {
-        margin: 0;
-        padding-bottom: 2rem;
-      }
-      .buttons {
-        flex-flow: column;
-        align-items: baseline;
-        width: 55%;
-        .btn-white {
-          width: 100%;
-          margin-top: 0.7rem;
-        }
-        .btn-accent {
-          width: 100%;
-          align-items: center;
-          margin-bottom: 0.7rem;
-        }
-      }
-    }
-    .about-movie {
-      height: 40%;
-      width: 90vw;
-      grid-column-gap: 0.5rem;
-      padding-left: 24px;
-      .sec {
-        h1 {
-          font-size: 1rem;
-          padding-bottom: 0.5rem;
-        }
-        p {
-          font-size: 0.8rem;
-        }
+        font-size: 3.2rem;
+        // margin-top: 5rem;
       }
     }
   }
-  #related {
-    display: none;
+}
+.box {
+  height: auto;
+}
+@media (max-width: 950px) {
+  // PAGE 1
+  .background-img {
+    width: 80%;
+    right: -0%;
+    top: 10%;
+  }
+  .container {
+    max-width: 700px;
+  }
+
+  .container-long {
+    #featured-movie {
+      .movie {
+        margin-left: 3rem;
+        .movie-title {
+          font-size: 3rem;
+          margin-top: 5rem;
+        }
+        .sub-title {
+          margin: 0;
+          padding-bottom: 2rem;
+        }
+        .buttons {
+          flex-flow: column;
+          align-items: baseline;
+          width: 55%;
+          .btn-white {
+            width: 100%;
+            margin-top: 0.7rem;
+          }
+          .btn-accent {
+            width: 100%;
+            align-items: center;
+            margin-bottom: 0.7rem;
+          }
+        }
+      }
+      .about-movie {
+        height: 40%;
+        width: 90vw;
+        grid-column-gap: 0.5rem;
+        padding-left: 24px;
+        .sec {
+          h1 {
+            font-size: 1rem;
+            padding-bottom: 0.5rem;
+          }
+          p {
+            font-size: 0.8rem;
+          }
+        }
+      }
+    }
+    #related {
+      display: none;
+    }
+  }
+  // MOVIES PAGE
+  .movie-search {
+    width: 500px;
+  }
+  // MY LIST
+  #my-List {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  #search-results {
+    grid-template-columns: repeat(2, 1fr);
+    .card {
+      margin: 0.5rem 0.2rem;
+    }
+  }
+  // ABOUT PAGE
+  .box {
+    height: auto;
+    padding: 1.5rem 0.75rem;
+    width: 90%;
+    margin-top: 0rem;
+    margin-bottom: 0;
+    h1 {
+      padding: 1rem 0;
+    }
+    p {
+      padding: 1rem 0;
+      font-size: 0.8rem;
+      text-align: center;
+    }
+    span {
+      display: none;
+    }
+    &-contact {
+      margin-bottom: 2.5rem;
+      width: 80%;
+
+      form {
+        margin: 0 1rem;
+        width: auto;
+      }
+    }
+  }
+  .mobile-card {
+    .flex {
+      padding-left: 1.5rem;
+    }
   }
 }
-// MOVIES PAGE
-.movie-search {
-  width: 500px;
-}
-#search-results {
-  grid-template-columns: repeat(2, 1fr);
-  .card {
-    margin: 0.5rem 0.2rem;
+@media (max-width: 670px) {
+  body {
+    overflow-y: auto;
+  }
+  .box {
+    position: relative;
+    z-index: -1;
+    p {
+      transition: all 0.5s;
+      transition-delay: 0.5s;
+      z-index: 0;
+    }
+  }
+  .background-img {
+    width: 100%;
+    top: 30%;
+    transform: translateY(-50%);
+  }
+  .left {
+    width: 90vw;
+    position: fixed;
+    justify-content: space-between;
+    align-items: center;
+    .hamburger {
+      display: block;
+      z-index: 4;
+    }
+    .logo {
+      font-size: 1.5rem;
+    }
+    ul {
+      position: fixed;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: $light-purple;
+      height: 100vh;
+      width: 100vw;
+      clip-path: circle(50px at -10% -10%);
+      transition: all 1s;
+      pointer-events: none;
+      z-index: 3;
+      &.open {
+        z-index: 3;
+        clip-path: circle(1250px at -10% -10%);
+        pointer-events: all;
+      }
+      li a {
+        opacity: 1;
+        border: none;
+        font-size: 1.4rem;
+        z-index: 4;
+      }
+      .selected {
+        border: none;
+        a {
+          color: lighten($accent-color, 10%);
+        }
+      }
+    }
+  }
+  .background-img {
+    top: 40%;
+  }
+  .container-long {
+    width: 100vw;
+    height: 100vh;
+    #featured-movie {
+      width: 100%;
+      height: 100vh;
+      .movie {
+        .movie-title {
+          margin-top: 2.5rem;
+          font-size: 2.3rem;
+        }
+        .buttons {
+          a {
+            padding: 1.3rem 1rem;
+          }
+        }
+      }
+      .about-movie {
+        grid-template-columns: repeat(2, 1fr);
+
+        height: 45%;
+        width: 95%;
+        padding-bottom: 20px;
+        grid-column-gap: 1rem;
+        .sec {
+          height: auto;
+          h1 {
+            font-size: 0.9rem;
+          }
+          p {
+            font-size: 0.7rem;
+          }
+        }
+      }
+    }
   }
 }
-@media (max-width: 480px) {
+@media (max-width: 450px) {
   // PAGE 1
   body {
     overflow-y: auto;
@@ -84,9 +241,10 @@
     .logo {
       font-size: 1.5rem;
     }
-    ul {
-      display: none;
-    }
+  }
+  .box-contact {
+    width: 90%;
+    height: 100vh;
   }
   .container-long {
     width: 100vw;
@@ -135,5 +293,51 @@
   }
   #search-results {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .mobile-card {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    padding: 1rem;
+    div img {
+      height: 100%;
+    }
+    .flex {
+      padding-left: 0;
+      padding-top: 1rem;
+      .sub-title {
+        padding: 0 1.5rem;
+        font-size: 1rem;
+      }
+      ul li {
+        font-size: 0.8rem;
+        padding: 0.7rem 1.5rem;
+      }
+    }
+  }
+  .plot-card {
+    height: auto;
+    padding: 0;
+    margin: 0;
+    .flex {
+      margin: 0;
+      padding: 2.5rem;
+      div {
+        height: 30vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+      }
+      p {
+        padding: 1rem 0;
+        font-size: 0.8rem;
+      }
+      a {
+        width: 60%;
+        margin: 0;
+        text-align: center;
+      }
+    }
   }
 }
