--- a/css/style.scss
+++ b/css/style.scss
@@ -47,6 +47,7 @@ header {
   }
 
   .logo {
+    cursor: pointer;
     font-family: "Teko", sans-serif;
     letter-spacing: 0.1rem;
     font-size: 2rem;
@@ -68,43 +69,6 @@ header {
         opacity: 1;
       }
       border-top: solid 3px $accent-color;
-    }
-  }
-}
-.right {
-  display: flex;
-  text-align: right;
-  & .search {
-    transition: all 0.5s;
-    & input {
-      border: none;
-      outline: none;
-      background: transparent;
-      margin-left: 1rem;
-      font-size: 1.2rem;
-      color: #ccc;
-      &:focus ~ .search {
-        transform: scale(1.2);
-      }
-    }
-    &:hover {
-      transform: scale(1.1);
-    }
-  }
-  & .account {
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    background: #ccc;
-    padding: 0.5rem;
-    align-self: flex-end;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s;
-    &:hover {
-      opacity: 0.7;
-      cursor: pointer;
     }
   }
 }
@@ -132,7 +96,7 @@ section {
     }
     & .sub-title {
       font-size: 1rem;
-      opacity: 0.8;
+      color: darken(white, 15%);
       padding-bottom: 4rem;
     }
     & .buttons {
@@ -188,7 +152,7 @@ section {
       }
       & p {
         font-size: 0.9rem;
-        opacity: 0.6;
+        color: darken(white, 15%);
       }
     }
   }
