--- a/css/widescreen.css
+++ b/css/widescreen.css
@@ -28,8 +28,24 @@
   width: 90%;
 }
 
+.container #movie {
+  padding: 3rem;
+}
+
+#my-List {
+  padding-bottom: 2rem;
+}
+
 #related {
   display: none;
+}
+
+.box {
+  height: auto;
+}
+
+.box-contact {
+  margin: 2.5rem auto;
 }
 
 @media (max-height: 414px) {
